--- a/.env
+++ b/.env
@@ -2,11 +2,11 @@
 
 CONTAINER_PREFIX=my_app
 
-WWW_PORT=8080
-PHPMYAMDIN_PORT=8081
+WWW_PORT=8088
+PHPMYAMDIN_PORT=8089
 MYSQL_PORT=8082
 
-MYSQL_DATABASE=my_app_db
+MYSQL_DATABASE=scheduler
 MYSQL_ROOT_PASSWORD=root
-MYSQL_USER=my_app
-MYSQL_PASSWORD=root
+MYSQL_USER=username
+MYSQL_PASSWORD=password
